[package]
name = "memoeyes"
version = "0.2.0"
authors = ["fruit-bird"]
edition = "2021"
description = "Procedural macros for automatic memoization"
repository = "https://github.com/fruit-bird/memoeyes"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["memoization", "macros"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
lru = "0.12.0"
once_cell = "1.18.0"
